fix: Remove image stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -201,12 +201,19 @@ nav h1 a {
 }
 
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
+  /* background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
-  min-width: 100%;
+   */
+  object-fit: contain;
+  margin: 5px;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+
 }
 
 #restaurants-list li h1 {
